[package]
name = "iceberg-rs"
version = "0.1.1-beta.0"
authors = ["Oliver Daff <oliverdaff@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "An implementation of Apache Iceberg in Rust"
homepage = "https://github.com/oliverdaff/iceberg-rs"
repository = "https://github.com/oliverdaff/iceberg-rs"
keywords = ["iceberg", "analytics", "data"]
categories = ["database", "filesystem"]
include = ["src/**/*.rs", "crates-io.md", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
readme = "crates-io.md"



[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
regex = "1.5.5"
lazy_static = "1.4.0"
apache-avro = "0.14.0"
serde_repr = "0.1"
num-bigint = "0.4.3"
chrono = { version = "0.4.19", features = ["serde"] }
serde_bytes = "0.11.7"
anyhow = "1.0"
async-trait = "0.1.57"
itertools = "0.10.3"
object_store = "0.4.0"
futures = "0.3.24"
getrandom = "0.2.7"
datafusion = { version = "12.0.0", optional = true }

[dev-dependencies]
proptest = "1.0"
tokio = "1.21.0"
